# string

./: CMakeLists.txt  README.md
app/: test
inc/: String.h
src/: CMakeLists.txt  String.cpp
test/: CMakeLists.txt  gtest.cpp
